crates/xlate/tests/snapshots/golden_matrix__err_temperature_out_of_range__gpt-4o-mini__20260910__chat_to_responses__gpt6.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-6-astra",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Say ok."
        }
      ]
    }
  ],
  "max_output_tokens": 32
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
temperature=dropped
